mobile/scss/modules/profile.scss
/* ... */
.profile-activity {
  >.title {
    display: block;
    font-size: 14px;
    line-height: 31px;
    font-weight: bold;
    color: #276b93;
    text-transform: uppercase;
    padding: 0 20px;
  }

  .no-feed-items{
    display: block;
    padding: 10px 20px 20px;
    font-size: 14px;
  }
  
  .item.card {
    margin-left: 1px;
    margin-right: 1px;
    background-color: $light;
  }
}

.profile-edit-list {
  .item {
    &.error {
      background: rgba(195, 113, 113, 0.12);;
    }
    
    .error-message {
      position: absolute;
      top: 5px;
      right: 5px;
      color: rgba(119, 6, 6, 0.5);
      font-weight: bold;
    }
    
    .email {
      font-size: 11px;
      line-height: 26px;
    }
  }
  
  .toggle-block {
    border-width: 0 0 1px;
    
    .button-bar .button.active {
      background: $badge-green;
    }
  }
}

@media only screen and (max-device-height : 568px) {
  .profile-visual {
    height: 84px;

    &.compact {
      padding-top: 54px;
    }

    .photo {
      width: 94px;
      height: 94px;
      -webkit-background-size: 94px 94px;
      background-size: 94px 94px;
      border-width: 1px;
    }

    .contacts-amount {
      padding-bottom: 10px;
      padding-right: 10px;
      
      strong {
        font-size: 12px;
      }
    }
  }

  .input-label {
    font-size: 14px;
  }

  .edit-pane .button.ion-log-out {
    line-height: 31px;
    max-height: 32px;

    &:before{
      font-size: 21px;
      line-height: 32px;
    }  
  }

  .profile-tabs {
    bottom: 59px;

    > .tab-nav {
      height: 49px;

      .tab-item {
        font-size: 12px;
        padding: 10px 0;
      }
    }

    .tab-content {
      padding-top: 50px;

      .content-button {
        font-size: 13px;
        min-height: 24px;

        .ico {
          margin-right: 10px;
          vertical-align: middle;
        }
      }
    }
  }
  
  .content-button .button.button-block {
    border: none;
    margin-top: 2px;
    margin-bottom: 2px;
  }
}

.badge-info-modal {
    h4, .button-icon {
      color: $light;
    }
    
    .row {
      margin-bottom: 30px;
    }
    
    .center {
      margin: 0 auto;
    }
    
    .text {
      color: $light;
      display: inline-block;
    }
    
    ul {
      list-style: initial;
      margin-left: 30px;
    }
    
    li {
      font-size: 16px;
      font-weight: 500;
      padding-bottom: 5px;
    }
    
    .order-now {
      margin-left: 22px;
      margin-right: 22px;
    }
    
    .button {
      border-radius: 6px;
      font-size: $font-size-base;
    }
    
    .icon-tier {
      width: 100px;
      height: 100px;
    }
    
    .footer-text {
      margin: 20px;
      font-size: $font-size-base;
    }
}

